internal/grammar/gore_parser.go
// Code generated from C:/Users/yangy/go/src/gstar1987td/gore/internal/grammar\Gore.g4 by ANTLR 4.8. DO NOT EDIT.

package grammar // Gore
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'rule:'", "'condition:'", "';'", "'run:'", "'return'", "'try:'", "'exception:'",
	"'if'", "'else'", "'then'", "'end'", "'is'", "'not'", "'like'", "'in'",
	"'('", "','", "')'", "'&&'", "'||'", "'max'", "'min'", "'round'", "'!'",
	"'~'", "'-'", "'true'", "'false'", "", "", "", "", "", "", "'null'", "",
	"", "", "", "", "", "'++'", "'--'", "'='", "", "", "", "", "", "'bingo'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "VARIABLE", "FACT", "VERSION",
	"FACT_PREF", "DECIMAL_LIT", "RAW_STRING_LIT", "NIL_LIT", "FLOAT_LIT", "WS",
	"COMMENT", "TERMINATOR", "LINE_COMMENT", "IDENTIFIER", "PLUS_PLUS", "MINUS_MINUS",
	"ASSIGN", "HIGH_PRIORITY_MATH", "LOW_PRIORITY_MATH", "BIT_OPER", "COMPARE_OPER",
	"CONVERT_TYPE", "BINGO", "OCTAL_LIT", "HEX_LIT",
}

var ruleNames = []string{
	"sourceFile", "ruleID", "context", "conditionList", "statementList", "statement",
	"ifStmt", "thenStmt", "incDecStmt", "expression", "unaryExp", "primaryExp",
	"operand", "unaryOper", "identifier", "basicLit", "integer", "eos",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type GoreParser struct {
	*antlr.BaseParser
}

func NewGoreParser(input antlr.TokenStream) *GoreParser {
	this := new(GoreParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Gore.g4"

	return this
}

// GoreParser tokens.
const (
	GoreParserEOF                = antlr.TokenEOF
	GoreParserT__0               = 1
	GoreParserT__1               = 2
	GoreParserT__2               = 3
	GoreParserT__3               = 4
	GoreParserT__4               = 5
	GoreParserT__5               = 6
	GoreParserT__6               = 7
	GoreParserT__7               = 8
	GoreParserT__8               = 9
	GoreParserT__9               = 10
	GoreParserT__10              = 11
	GoreParserT__11              = 12
	GoreParserT__12              = 13
	GoreParserT__13              = 14
	GoreParserT__14              = 15
	GoreParserT__15              = 16
	GoreParserT__16              = 17
	GoreParserT__17              = 18
	GoreParserT__18              = 19
	GoreParserT__19              = 20
	GoreParserT__20              = 21
	GoreParserT__21              = 22
	GoreParserT__22              = 23
	GoreParserT__23              = 24
	GoreParserT__24              = 25
	GoreParserT__25              = 26
	GoreParserT__26              = 27
	GoreParserT__27              = 28
	GoreParserVARIABLE           = 29
	GoreParserFACT               = 30
	GoreParserVERSION            = 31
	GoreParserFACT_PREF          = 32
	GoreParserDECIMAL_LIT        = 33
	GoreParserRAW_STRING_LIT     = 34
	GoreParserNIL_LIT            = 35
	GoreParserFLOAT_LIT          = 36
	GoreParserWS                 = 37
	GoreParserCOMMENT            = 38
	GoreParserTERMINATOR         = 39
	GoreParserLINE_COMMENT       = 40
	GoreParserIDENTIFIER         = 41
	GoreParserPLUS_PLUS          = 42
	GoreParserMINUS_MINUS        = 43
	GoreParserASSIGN             = 44
	GoreParserHIGH_PRIORITY_MATH = 45
	GoreParserLOW_PRIORITY_MATH  = 46
	GoreParserBIT_OPER           = 47
	GoreParserCOMPARE_OPER       = 48
	GoreParserCONVERT_TYPE       = 49
	GoreParserBINGO              = 50
	GoreParserOCTAL_LIT          = 51
	GoreParserHEX_LIT            = 52
)

// GoreParser rules.
const (
	GoreParserRULE_sourceFile    = 0
	GoreParserRULE_ruleID        = 1
	GoreParserRULE_context       = 2
	GoreParserRULE_conditionList = 3
	GoreParserRULE_statementList = 4
	GoreParserRULE_statement     = 5
	GoreParserRULE_ifStmt        = 6
	GoreParserRULE_thenStmt      = 7
	GoreParserRULE_incDecStmt    = 8
	GoreParserRULE_expression    = 9
	GoreParserRULE_unaryExp      = 10
	GoreParserRULE_primaryExp    = 11
	GoreParserRULE_operand       = 12
	GoreParserRULE_unaryOper     = 13
	GoreParserRULE_identifier    = 14
	GoreParserRULE_basicLit      = 15
	GoreParserRULE_integer       = 16
	GoreParserRULE_eos           = 17
)

// ISourceFileContext is an interface to support dynamic dispatch.
type ISourceFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSourceFileContext differentiates from other interfaces.
	IsSourceFileContext()
}

type SourceFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceFileContext() *SourceFileContext {
	var p = new(SourceFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoreParserRULE_sourceFile
	return p
}

func (*SourceFileContext) IsSourceFileContext() {}

func NewSourceFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceFileContext {
	var p = new(SourceFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoreParserRULE_sourceFile

	return p
}

func (s *SourceFileContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceFileContext) RuleID() IRuleIDContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRuleIDContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRuleIDContext)
}

func (s *SourceFileContext) AllEos() []IEosContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEosContext)(nil)).Elem())
	var tst = make([]IEosContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEosContext)
		}
	}

	return tst
}

func (s *SourceFileContext) Eos(i int) IEosContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEosContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *SourceFileContext) AllContext() []IContextContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IContextContext)(nil)).Elem())
	var tst = make([]IContextContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IContextContext)
		}
	}

	return tst
}

func (s *SourceFileContext) Context(i int) IContextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IContextContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IContextContext)
}

func (s *SourceFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.EnterSourceFile(s)
	}
}

func (s *SourceFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.ExitSourceFile(s)
	}
}

func (s *SourceFileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoreVisitor:
		return t.VisitSourceFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GoreParser) SourceFile() (localctx ISourceFileContext) {
	localctx = NewSourceFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GoreParserRULE_sourceFile)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.RuleID()
	}
	{
		p.SetState(37)
		p.Eos()
	}
	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == GoreParserT__1 || _la == GoreParserT__3 {
		{
			p.SetState(38)
			p.Context()
		}
		{
			p.SetState(39)
			p.Eos()
		}

		p.SetState(45)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IRuleIDContext is an interface to support dynamic dispatch.
type IRuleIDContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetId returns the id token.
	GetId() antlr.Token

	// GetVersion returns the version token.
	GetVersion() antlr.Token

	// SetId sets the id token.
	SetId(antlr.Token)

	// SetVersion sets the version token.
	SetVersion(antlr.Token)

	// IsRuleIDContext differentiates from other interfaces.
	IsRuleIDContext()
}

type RuleIDContext struct {
	*antlr.BaseParserRuleContext
	parser  antlr.Parser
	id      antlr.Token
	version antlr.Token
}

func NewEmptyRuleIDContext() *RuleIDContext {
	var p = new(RuleIDContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoreParserRULE_ruleID
	return p
}

func (*RuleIDContext) IsRuleIDContext() {}

func NewRuleIDContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleIDContext {
	var p = new(RuleIDContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoreParserRULE_ruleID

	return p
}

func (s *RuleIDContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleIDContext) GetId() antlr.Token { return s.id }

func (s *RuleIDContext) GetVersion() antlr.Token { return s.version }

func (s *RuleIDContext) SetId(v antlr.Token) { s.id = v }

func (s *RuleIDContext) SetVersion(v antlr.Token) { s.version = v }

func (s *RuleIDContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(GoreParserIDENTIFIER, 0)
}

func (s *RuleIDContext) VERSION() antlr.TerminalNode {
	return s.GetToken(GoreParserVERSION, 0)
}

func (s *RuleIDContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleIDContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleIDContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.EnterRuleID(s)
	}
}

func (s *RuleIDContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.ExitRuleID(s)
	}
}

func (s *RuleIDContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoreVisitor:
		return t.VisitRuleID(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GoreParser) RuleID() (localctx IRuleIDContext) {
	localctx = NewRuleIDContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GoreParserRULE_ruleID)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.Match(GoreParserT__0)
	}
	{
		p.SetState(47)

		var _m = p.Match(GoreParserIDENTIFIER)

		localctx.(*RuleIDContext).id = _m
	}
	{
		p.SetState(48)

		var _m = p.Match(GoreParserVERSION)

		localctx.(*RuleIDContext).version = _m
	}

	return localctx
}

// IContextContext is an interface to support dynamic dispatch.
type IContextContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsContextContext differentiates from other interfaces.
	IsContextContext()
}

type ContextContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyContextContext() *ContextContext {
	var p = new(ContextContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoreParserRULE_context
	return p
}

func (*ContextContext) IsContextContext() {}

func NewContextContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ContextContext {
	var p = new(ContextContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoreParserRULE_context

	return p
}

func (s *ContextContext) GetParser() antlr.Parser { return s.parser }

func (s *ContextContext) CopyFrom(ctx *ContextContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ContextContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ContextContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ConditionCheckContext struct {
	*ContextContext
}

func NewConditionCheckContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ConditionCheckContext {
	var p = new(ConditionCheckContext)

	p.ContextContext = NewEmptyContextContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ContextContext))

	return p
}

func (s *ConditionCheckContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConditionCheckContext) ConditionList() IConditionListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConditionListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConditionListContext)
}

func (s *ConditionCheckContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.EnterConditionCheck(s)
	}
}

func (s *ConditionCheckContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.ExitConditionCheck(s)
	}
}

func (s *ConditionCheckContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoreVisitor:
		return t.VisitConditionCheck(s)

	default:
		return t.VisitChildren(s)
	}
}

type RunGoreContext struct {
	*ContextContext
}

func NewRunGoreContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RunGoreContext {
	var p = new(RunGoreContext)

	p.ContextContext = NewEmptyContextContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ContextContext))

	return p
}

func (s *RunGoreContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RunGoreContext) StatementList() IStatementListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *RunGoreContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.EnterRunGore(s)
	}
}

func (s *RunGoreContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoreListener); ok {
		listenerT.ExitRunGore(s)
	}
}

func (s *RunGoreContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoreVisitor:
		return t.VisitRunGore(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GoreParser) Context() (localctx IContextContext) {
	localctx = NewContextContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GoreParserRULE_context)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(58)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case GoreParserT__1:
		localctx = NewConditionCheckContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.Match(GoreParserT__1)
		}
		{
			p.SetState(51)
			p.ConditionList()
		}
		{
			p.SetState(52)
			p.Match(GoreParserT__2)
		}

	case GoreParserT__3:
		localctx = NewRunGoreContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(54)
			p.Match(GoreParserT__3)
		}
		{
			p.SetState(55)
			p.StatementList()
		}
		{
			p.SetState(56)
			p.Match(GoreParserT__2)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IConditionListContext is an interface to support dynamic dispatch.
type IConditionListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConditionListContext differentiates from other interfaces.
	IsConditionListContext()
}

type ConditionListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionListContext() *ConditionListContext {
	var p = new(ConditionListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoreParserRULE_conditionList
	return p
}
